--- a/gidrotsikly/index.html
+++ b/gidrotsikly/index.html
@@ -317,6 +317,9 @@
 												<img src="images/basket-white.svg" alt="">
 											</button>
 										<a class="product-item" href="#">
+											<p class="product-item__hover-text">
+												посмотреть товар
+											</p>
 											<img class="product-item__img" src="images/content/product-1.png" alt="">
 											<h4 class="product-item-title">
 												Водонепроницаемый
