--- a/gidrotsikly/index.html
+++ b/gidrotsikly/index.html
@@ -283,32 +283,32 @@
 	<section class="products">
 		<div class="container">
 			<div class="products__inner">
+				<h3 class="product-title">
+					Популярные товары
+				</h3>
 				<div class="tabs-wrapper">
 					<div class="tabs products__tabs">
-						<a class="tab tab--active products__tab" href="#">
+						<a class="tab  products__tab tab--active" href="#product-tab-1">
 							запчасти	
 						</a>
-						<a class="tab products__tab" href="#">
+						<a class="tab products__tab" href="#product-tab-2">
 							моторы
 						</a>
-						<a class="tab products__tab" href="#">
+						<a class="tab products__tab" href="#product-tab-3">
 							шины 
 						</a>
-						<a class="tab products__tab" href="#">
+						<a class="tab products__tab" href="#product-tab-4">
 							электроника
 						</a>
-						<a class="tab products__tab" href="#">
+						<a class="tab products__tab" href="#product-tab-5">
 							инструменты
 						</a>
-						<a class="tab products__tab" href="#">
+						<a class="tab products__tab" href="#product-tab-6">
 							аксессуары 
 						</a>
 					</div>
 					<div class="tabs-container products__container">
-						<div class="tabs-content products__content tabs-content--active">
-						
-						</div>
-						<div class="tabs-content products__content">
+						<div id="product-tab-1" class="tabs-content products__content tabs-content--active">
 							<div class="product-slider">
 								<div class="product-slider__item">
 									<div class="product-item__wrapper">
@@ -316,6 +316,9 @@
 											<button class="product-item__basket">
 												<img src="images/basket-white.svg" alt="">
 											</button>
+											<a class="product-item__notify-link" href="#">
+												<span>Сообщить о поступлении</span>
+											</a>
 										<a class="product-item" href="#">
 											<p class="product-item__hover-text">
 												посмотреть товар
@@ -328,22 +331,335 @@
 											<p class="price product-item__price">
 												9 800 ₽
 											</p>
+											<p class="product-item__notify-text">
+												нет в наличии
+											</p>
 										</a>
 									</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper product-item__not-available">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper product-item__not-available">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
 							</div>
+						
 						</div>
-						<div class="tabs-content products__content">
+						<div id="product-tab-2" class="tabs-content products__content">
+							<div class="product-slider">
+								<div class="product-slider__item">
+									<div class="product-item__wrapper">
+											<button class="product-item__favorite"></button>
+											<button class="product-item__basket">
+												<img src="images/basket-white.svg" alt="">
+											</button>
+											<a class="product-item__notify-link" href="#">
+												<span>Сообщить о поступлении</span>
+											</a>
+										<a class="product-item" href="#">
+											<p class="product-item__hover-text">
+												посмотреть товар
+											</p>
+											<img class="product-item__img" src="images/content/product-1.png" alt="">
+											<h4 class="product-item-title">
+												Водонепроницаемый
+												Рюкзак
+											</h4>
+											<p class="price product-item__price">
+												9 800 ₽
+											</p>
+											<p class="product-item__notify-text">
+												нет в наличии
+											</p>
+										</a>
+									</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper product-item__not-available">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper product-item__not-available">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+							</div>
 
 						</div>
-						<div class="tabs-content products__content">
-
+						<div id="product-tab-3"class="tabs-content products__content">
+							Slider3
 						</div>
-						<div class="tabs-content products__content">
-
+						<div id="product-tab-4"class="tabs-content products__content">
+							Slider4
 						</div>
-						<div class="tabs-content products__content">
-
+						<div id="product-tab-5"class="tabs-content products__content">
+							Slider5
 						</div>
+						<div id="product-tab-6"class="tabs-content products__content">
+							Slider6
+						</div>
+				</div>
+				<div class="product__more">
+					<a class="product__more-link" href="#">
+						Показать еще
+					</a>
+				</div>
 				</div>
 			</div>
 		</div>
