--- a/gidrotsikly/index.html
+++ b/gidrotsikly/index.html
@@ -664,6 +664,480 @@
 			</div>
 		</div>
 	</section>
+	
+	<div class="banner">
+		<div class="container">
+			<a class="banner-link" href="#">
+				<img src="images/content/banner.jpg" alt="">
+			</a>
+		</div>
+	</div>
+
+		
+	<section class="products">
+		<div class="container">
+			<div class="products__inner">
+				<h3 class="product-title">
+				С этим товаром покупают	
+				</h3>
+				<div class="tabs-wrapper">
+					<div class="tabs products__tabs">
+						<a class="tab  products__tab tab--active" href="#popular-tab-1">
+							запчасти	
+						</a>
+						<a class="tab products__tab" href="#popular-tab-2">
+							моторы
+						</a>
+						<a class="tab products__tab" href="#popular-tab-3">
+							шины 
+						</a>
+						<a class="tab products__tab" href="#popular-tab-4">
+							электроника
+						</a>
+						<a class="tab products__tab" href="#popular-tab-5">
+							инструменты
+						</a>
+						<a class="tab products__tab" href="#popular-tab-6">
+							аксессуары 
+						</a>
+					</div>
+					<div class="tabs-container products__container">
+						<div id="popular-tab-1" class="tabs-content products__content tabs-content--active">
+							<div class="product-slider">
+								<div class="product-slider__item">
+									<div class="product-item__wrapper">
+											<button class="product-item__favorite"></button>
+											<button class="product-item__basket">
+												<img src="images/basket-white.svg" alt="">
+											</button>
+											<a class="product-item__notify-link" href="#">
+												<span>Сообщить о поступлении</span>
+											</a>
+										<a class="product-item" href="#">
+											<p class="product-item__hover-text">
+												посмотреть товар
+											</p>
+											<img class="product-item__img" src="images/content/product-1.png" alt="">
+											<h4 class="product-item-title">
+												Водонепроницаемый
+												Рюкзак
+											</h4>
+											<p class="price product-item__price">
+												9 800 ₽
+											</p>
+											<p class="product-item__notify-text">
+												нет в наличии
+											</p>
+										</a>
+									</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper product-item__not-available">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper product-item__not-available">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+							</div>
+						
+						</div>
+						<div id="popular-tab-2" class="tabs-content products__content">
+							<div class="product-slider">
+								<div class="product-slider__item">
+									<div class="product-item__wrapper">
+											<button class="product-item__favorite"></button>
+											<button class="product-item__basket">
+												<img src="images/basket-white.svg" alt="">
+											</button>
+											<a class="product-item__notify-link" href="#">
+												<span>Сообщить о поступлении</span>
+											</a>
+										<a class="product-item" href="#">
+											<p class="product-item__hover-text">
+												посмотреть товар
+											</p>
+											<img class="product-item__img" src="images/content/product-1.png" alt="">
+											<h4 class="product-item-title">
+												Водонепроницаемый
+												Рюкзак
+											</h4>
+											<p class="price product-item__price">
+												9 800 ₽
+											</p>
+											<p class="product-item__notify-text">
+												нет в наличии
+											</p>
+										</a>
+									</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper product-item__not-available">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper product-item__not-available">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+								<div class="product-slider__item">
+										<div class="product-item__wrapper">
+												<button class="product-item__favorite"></button>
+												<button class="product-item__basket">
+													<img src="images/basket-white.svg" alt="">
+												</button>
+												<a class="product-item__notify-link" href="#">
+													<span>Сообщить о поступлении</span>
+												</a>
+											<a class="product-item product-item--sale" href="#">
+												<p class="product-item__hover-text">
+													посмотреть товар
+												</p>
+												<img class="product-item__img" src="images/content/product-1.png" alt="">
+												<h4 class="product-item-title">
+													Водонепроницаемый
+													Рюкзак
+												</h4>
+												<p class="price product-item__price">
+													9 800 ₽
+												</p>
+												<p class="product-item__notify-text">
+													нет в наличии
+												</p>
+											</a>
+										</div>
+								</div>
+							</div>
+
+						</div>
+						<div id="popular-tab-3"class="tabs-content products__content">
+							Slider3
+						</div>
+						<div id="popular-tab-4"class="tabs-content products__content">
+							Slider4
+						</div>
+						<div id="popular-tab-5"class="tabs-content products__content">
+							Slider5
+						</div>
+						<div id="popular-tab-6"class="tabs-content products__content">
+							Slider6
+						</div>
+				</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="footer-top">
+				<div class="footer__top-inner">
+					<div class="footer__top-item footer__top-newslatter">
+						<h6 class="footer__top-title">
+							Подпишитесь на нашу рассылку 
+							и узнавайте о акциях быстрее
+						</h6>
+						<form class="footer-form" action="">
+							<input class="footer-form__input" type="" placeholder="Введите ваш e-mail:">
+							<button type="submit">Отправить</button>
+						</form>
+					</div>
+					<div class="footer__top-item">
+						<h6 class="footer__top-title">
+						Информация
+						</h6>
+						<ul class="footer-list">
+							<li class="footer-list__item"><a href="#">О компании</a></li>
+							<li class="footer-list__item"><a href="#">Контакты</a></li>
+							<li class="footer-list__item"><a href="#">Акции</a></li>
+							<li class="footer-list__item"><a href="#">Магазины</a></li>
+						</ul>
+					</div>
+					<div class="footer__top-item">
+						<h6 class="footer__top-title">
+							Интернет-магазин
+						</h6>
+						<ul class="footer-list">
+							<li class="footer-list__item"><a href="#">Доставка и самовывоз</a></li>
+							<li class="footer-list__item"><a href="#">Оплата</a></li>
+							<li class="footer-list__item"><a href="#">Возврат-обмен</a></li>
+							<li class="footer-list__item"><a href="#">Новости</a></li>
+						</ul>
+					</div>
+					<div class="footer__top-item">
+						<ul class="social-list">
+							<li class="social-list__item">
+								<a href="#">
+									<img src="images/instagram.svg" alt="">
+								</a>
+							</li>
+							<li class="social-list__item">
+								<a href="#">
+									<img src="images/vkontakte.svg" alt="">
+								</a>
+							</li>
+							<li class="social-list__item">
+								<a href="#">
+									<img src="images/facebook.svg" alt="">
+								</a>
+							</li>
+							<li class="social-list__item">
+								<a href="#">
+									<img src="images/youtube.svg" alt="">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="footer-bottom">
+				<a class="footer-bottom-link" href="#">
+					Договор оферты
+				</a>
+				<a class="footer-bottom-link" href="#">
+					Политика обработки персональных данных
+				</a>
+			</div>
+		</div>
+	</footer>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
