--- a/gidrotsikly/index.html
+++ b/gidrotsikly/index.html
@@ -1065,7 +1065,7 @@
 						</h6>
 						<form class="footer-form" action="">
 							<input class="footer-form__input" type="" placeholder="Введите ваш e-mail:">
-							<button type="submit">Отправить</button>
+							<button class="footer-form__btn" type="submit">Отправить</button>
 						</form>
 					</div>
 					<div class="footer__top-item">
@@ -1090,7 +1090,7 @@
 							<li class="footer-list__item"><a href="#">Новости</a></li>
 						</ul>
 					</div>
-					<div class="footer__top-item">
+					<div class="footer__top-item footer__top-social">
 						<ul class="social-list">
 							<li class="social-list__item">
 								<a href="#">
