--- a/gidrotsikly/catalog.html
+++ b/gidrotsikly/catalog.html
@@ -191,23 +191,23 @@
 							<form class="aside-filter__form" action="">
 								<ul class="aside-filter__list">
 									<li class="aside-filter__item-drop">
-										<p class="aside-filter__item-title filter__item-drop">Наличие</p>
-										<p class="aside-filter__content">
+										<p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Наличие</p>
+										<div class="aside-filter__content">
 											<div class="aside-filter__content-box">
-												<label for="">
+												<label class="aside-filter__content-label" for="">
 													<input class="filter-style" type="checkbox">
 													В наличие
 												</label>
 											</div>
 
 											<div class="aside-filter__content-box">
-												<label for="">
+												<label class="aside-filter__content-label" for="">
 													<input class="filter-style" type="checkbox">
 													Под заказ
 												</label>
 											</div>
 
-										</p>
+										</div>
 									</li>
 									<li class="aside-filter__item-drop"></li>
 									<li class="aside-filter__item-drop"></li>
