--- a/gidrotsikly/catalog.html
+++ b/gidrotsikly/catalog.html
@@ -209,8 +209,51 @@
 
 										</div>
 									</li>
-									<li class="aside-filter__item-drop"></li>
-									<li class="aside-filter__item-drop"></li>
+									<li class="aside-filter__item-drop">
+										<p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Новинки</p>
+										<div class="aside-filter__content aside-filter__content-radio">
+											<div class="aside-filter__content-box">
+												<label class="aside-filter__content-label" for="">
+													<input class="filter-style" name="radio" type="radio">
+														Все
+												</label>
+											</div>
+
+											<div class="aside-filter__content-box">
+												<label class="aside-filter__content-label" for="">
+													<input class="filter-style" name="radio" type="radio">
+														Новинки
+												</label>
+											</div>
+											<div class="aside-filter__content-box">
+												<label class="aside-filter__content-label" for="">
+													<input class="filter-style" name="radio" type="radio">
+														Акции
+												</label>
+											</div>
+
+										</div>
+									</li>
+									<li class="aside-filter__item-drop">
+									<p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Цена</p>
+										<div class="aside-filter__content aside-filter__content-radio">
+											<input type="text" class="js-range-slider" name="my_range" value=""	data-min="100000" data-max="500000" data-from="150000" data-to="275000"/>
+										</div>
+									</li>
+									<li class="aside-filter__item-list">
+										<div class="filter__item-list">
+											<p class="filter__item-listtitle">
+												Мощность, л.с.
+											</p>
+											<select class="filter-style filter__item-listselect">
+												<option>90</option>
+												<option>130</option>
+												<option>154</option>
+												<option>230</option>
+											</select>
+										</div>
+										<div class="filter__item-list"></div>
+									</li>
 								</ul>
 							</form>
 							</div>
