--- a/gidrotsikly/catalog.html
+++ b/gidrotsikly/catalog.html
@@ -152,7 +152,7 @@
 						<option value="">2</option>
 						<option value="">3</option>
 					</select>
-					<button class="catalog__filter-btngrid">
+					<button class="catalog__filter-btngrid catalog__filter-button catalog__filter-button--active">
 <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
 <rect x="1" y="1" width="21" height="19" stroke="#2F3035" stroke-width="2"/>
 <rect x="7" y="6" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2"/>
@@ -161,7 +161,7 @@
 <rect x="14" y="13" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2"/>
 </svg>
 					</button>
-					<button class="catalog__filter-btnline">
+					<button class="catalog__filter-btnline catalog__filter-button">
 <svg width="25" height="19" viewBox="0 0 25 19" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g opacity="1">
 <rect x="6" width="19" height="3" rx="1.5" fill="#2F3035"/>
