--- a/gidrotsikly/index.html
+++ b/gidrotsikly/index.html
@@ -1155,7 +1155,7 @@
 				<!-- 		</a> -->
 				<!-- 	</div> -->
 				<!-- 	<div class="tabs-container"> -->
-				<!-- 		<div class="tabs-content"> -->
+				<!-- 		<div class="tabs-content tabs-content--active"> -->
 						
 				<!-- 		</div> -->
 				<!-- 	</div> -->
