--- a/gidrotsikly/product-page.html
+++ b/gidrotsikly/product-page.html
@@ -48,6 +48,7 @@
 					</nav>
 					<a class="logo" href="#">
 						<img class="logo__img" src="images/logo.svg" alt="">
+						<img class="logo__mobile-img" src="images/logo-mobile.svg" alt="">
 					</a>
 					<div class="header__box">
 						<p class="header__adress">
@@ -351,8 +352,8 @@
 	
 	<section class="card__tabs">
 		<div class="container">
-			<div class="tabs-wrapper tabs-wrapper--no-scroll">
-				<div class="tabs card__tab-box">
+			<div class="tabs-wrapper">
+				<div class="tabs card__tab-box mobile-overflow">
 					<a class="tab card__tab" href="#product-card__tabs-1">
 						О товаре	
 					</a>
@@ -375,6 +376,7 @@
 						Гарантия
 					</a>
 				</div>
+			</div>
 				<div class="tabs-container">
 					<div id="product-card__tabs-1" class="card__tab-content tabs-content">
 						content	
@@ -497,7 +499,6 @@
 						content	
 					</div>
 				</div>
-			</div>
 		</div>
 	</section>
 
@@ -510,7 +511,7 @@
 				С этим товаром покупают	
 				</h3>
 				<div class="tabs-wrapper">
-					<div class="tabs products__tabs">
+					<div class="tabs products__tabs mobile-overflow">
 						<a class="tab  products__tab tab--active" href="#popular-tab-1">
 							запчасти	
 						</a>
@@ -530,6 +531,7 @@
 							аксессуары 
 						</a>
 					</div>
+				</div>
 					<div class="tabs-container products__container">
 						<div id="popular-tab-1" class="tabs-content products__content tabs-content--active">
 							<div class="product-slider">
@@ -877,7 +879,6 @@
 						<div id="popular-tab-6"class="tabs-content products__content">
 							Slider6
 						</div>
-				</div>
 				</div>
 			</div>
 		</div>
